          before the first process is spawned by systemd. Note that the logic
          in timesyncd remains, as it is more comprehensive and ensures
          montonic clocks by maintaining a persistant timestamp file in
          /var. Since /var is generally not available in earliest boot or the
          initrd, this part of the logic remains in timesyncd, and is not done
          by PID 1.

        * A new service setting RuntimeMaxSec= has been added that may be used
          to specify a maximum runtime for a service. If the timeout is hit, the
          service is terminated and put into a failure state.

        * A new service setting AmbientCapabilities= has been added. It allows
          configuration of additional Linux process capabilities that are
          passed to the activated processes. This is only available on very
          recent kernels.

        * The process resource limit settings in service units may now be used
          to configure hard and soft limits individually.

        * The various libsystemd APIs such as sd-bus or sd-event now publicly
          expose support for gcc's __attribute__((cleanup())) C
          extension. Specifically, for many object destructor functions
          alternative versions whose names are suffixed with "p" have been
          added, which take a pointer to a pointer to the object to destroy,
          instead of just a pointer to the object itself. This is useful because
          these destructor functions may be used directly as parameters to the
          cleanup construct. Internally, systemd has been a heavy user of the
          GCC extension since a long time, and with this change similar support
          is now available to consumers of the library outside of systemd. Note
          that by using this extension in your sources compatibility with old
          and strictly ANSI compatible C compilers is lost. However, any gcc or